# haskell-json-sample

./: .gitignore  README.md  haskell-json-sample.cabal
.stack-work/install/x86_64-osx/lts-2.15/7.8.4/doc/: doc-index.html  index-frames.html  index.html
.stack-work/install/x86_64-osx/lts-2.15/7.8.4/doc/haskell-json-sample-0.1.0.0/: WeatherTool-JsonScheme.html  WeatherTool.html  doc-index.html  haskell-json-sample.haddock  haskell-json-sample.txt  index-frames.html  index.html  mini_WeatherTool-JsonScheme.html  mini_WeatherTool.html
.stack-work/install/x86_64-osx/lts-2.15/7.8.4/doc/haskell-json-sample-0.1.0.0/src/: WeatherTool-JsonScheme.html  WeatherTool.html
app/: Main.hs
src/: WeatherTool.hs
src/WeatherTool/: JsonScheme.hs
test/: Spec.hs  doctest.hs
