name:                haskell-json-sample
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/kazeula/haskell-json-sample
license:             BSD3
license-file:        LICENSE
author:              kazeula
maintainer:          osmium.k@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WeatherTool
                     , WeatherTool.JsonScheme 
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5 && < 0.6
                     , text >= 1.2 && < 1.3
                     , wreq >= 0.3 && < 0.4
                     , lens >= 4.7 && < 4.8
                     , aeson >= 0.8 && < 0.9
                     , lens-aeson >= 1.0 && < 1.1
                     , http-client >= 0.4 && < 0.5
  default-language:    Haskell2010

executable haskell-json-sample-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-json-sample
                     , text >= 1.2 && < 1.3
                     , text-format >= 0.3 && < 0.4
                     , lens >= 4.7 && < 4.8
                     , conduit >= 1.2 && < 1.3
                     , conduit-extra >= 1.1 && < 1.2
                     , resourcet >= 1.1 && < 1.2
                     , transformers > 0.3 && < 0.4
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-json-sample
                     , hspec >= 2.1 && < 2.2
                     , QuickCheck >= 2.7 && < 2.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctest.hs
  build-depends:       base
                     , doctest >= 0.9 && < 0.10
  ghc-options:         -threaded
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kazeula/haskell-json-sample
